--- a/style.css
+++ b/style.css
@@ -34,14 +34,23 @@ h1, h2{
     grid-column:1/5;
     background-color:yellow;
     height:650px;
+    text-align:center;
 }
 
-.box1 p {
+.box1 a {
+    text-decoration:none;
+    background-color:#ccb4e7;
+    color:white;
     padding:10px;
+    border-radius:12px;
+    font-size:20px;
+}
+
+.box1 a:hover{
+    background-color:#9673A6;
 }
 
 .box1 h1 {
-    text-align:center;
     margin-top:12%;
     font-size:4.5em;
 }
@@ -60,7 +69,8 @@ h1, h2{
 .subtitle {
     grid-column:2/4;
     margin:3.5% 30% 0;
-    background-color:grey;
+    text-align:center;
+    border:1px solid black;
 }
 
 .subtitle p {
@@ -88,29 +98,57 @@ h1, h2{
 /* end of index page css */
 
 /* quiz page css */
-.quizbox{
+.quiz-page{
     grid-column:2/4;
+}
+
+.quiz-page h1{
+    color:black;
+    text-align:center;
+}
+
+.quizbox{
     background-color:#ccb4e7;
     border:1px solid #9673A6;
-    margin:5% 7.5% 0;
+    margin:0 7.5% 0;
     color:white;
 }
 
 .quizbox h1{ 
-    text-align:center;
     margin-top:5%;
+    color:white;
 }
 
 .quizbox h2{
     float:right;
-    padding-right:80px;
-    margin-top:-2%;
+    margin:0;
+    padding:0;
+}
+
+.quizbox a{
+    text-decoration:none;
+    color:white;
+    padding:0 20px;
+}
+
+.quizbox .next{
+    float:right;
+}
+
+.quizbox .prev{
+    float:right;
+    margin:0;
 }
 
 .quizbox p{
     text-align:center;
     margin-top:15%;
     margin-bottom:5%;
+}
+
+.quizbox hr{
+    margin-top:9%;
+    margin-bottom:2%;
 }
 /* end of quiz page css */
 
@@ -121,90 +159,99 @@ h1, h2{
     height:auto;
 }
 
+.article-list .flex-container{
+    margin-top:3%;
+    display:flex;
+}
+
+.article-list .flex-child{
+    flex:1;
+    border:1px solid black;
+    height:250px;
+    margin:0 2%;
+}
+
+.article-list .flex-container2{
+    display:flex;
+}
+
+.article-list .flex-child2{
+    flex:1;
+    text-align:center;
+}
+
 .article-list h1{
     text-align:center;
 }
 
-.article-list .image{
-    width:25%;
-    height:180px;
-    margin-left:5%;
-    margin-bottom:3%;
-    background-color:lightgreen;
-    display:inline-block;
-}
-
-.article-list .title{
-    background-color:lightblue;
-    width:40%;
-    display:inline-block;
-}
-
-.article-list h2{
+.article-list .nav-buttons{
     text-align:center;
-    padding:0;
-    margin-top:1.75%;
+    margin-top:2%;
+    width:100%;
 }
 
+.article-list .nav-buttons a{
+    margin:0 5%;
+    text-decoration:none;
+    color:white;
+    padding:5px;
+    background-color:#ccb4e7;
+    border-radius:5px;
+}
+
+.article-list .nav-buttons a:hover{
+    background-color:#9673A6;
+}
+
+.article-list .nav-buttons p{
+    margin-top:-1.5%;
+}
 /* end of article list page css */
 
 /* article page css */
+.article-wrapper{
+    grid-row:2;
+    grid-column:1/4;
+    display:grid;    /* another grid to set up inner text boxes*/
+    grid-template-columns: 75% 25%;
+    grid-template-rows:auto;
+}
+
 .article{
-    grid-column:2/4;
-    height:1000px;
-    margin:5% 7.5% 0;
+    grid-column:1/2;
+    margin-left:5%;
     background-color:lightcoral;
-}
-
-.article h1, h2{
-    padding-left:60px;
-}
-
-.article h2{
-    padding-bottom:15px;
+    height:1000px;
 }
 
 .article .video{
     border:1px solid black;
     height:400px;
-    margin:5% 5% 0;
+    margin:5% 10% 0;
 }
 
-.article p{
-    margin-top:5%;
-}
-
-.similar{
-    grid-column:2/4;
-    height:auto;
-    margin:5% 0 0;
+.similar-articles{
+    grid-column:2/3;
     background-color:lightskyblue;
+    height:680px;
 }
 
-.similar h1{
+.similar-articles h1{
     text-align:center;
 }
 
-.similar .flex-container{
-    margin-top:3%;
-    display:flex;
-}
-
-.similar .flex-child{
-    flex:1;
+.similar-articles p.image{
     border:1px solid black;
-    height:200px;
-    margin:0 2%;
+    height:150px;
+    margin:auto 10%;
 }
 
-.similar .flex-container2{
-    display:flex;
-}
-
-.similar .flex-child2{
-    flex:1;
+.similar-articles p{
     text-align:center;
+    margin-top:0;
+    margin-bottom:7.5%;
 }
+
 /* end of article page css */
 
 /* all products page css */
@@ -214,27 +261,65 @@ h1, h2{
     text-align:center;
 }
 
-.products .flex-container{
-    background-color:palegreen;
-    margin-top:3%;
-    display:flex;
+.container{
+    margin-left:1.5%;
+    height:auto;
+    background: mediumaquamarine;
 }
 
-.products .flex-child{
-    flex:1;
+.product-box{
+    float:left;
+    height:auto;
+    width:24vw;
+    text-align:center;
+    word-wrap:break-word;
+    border-right:1px solid grey;
+    border-bottom:1px solid grey;
+}
+
+.top-row .product-box{
+    border-top:2px solid grey;
+}
+
+#first{
+    border-left:1px solid grey;
+}
+
+.product-box .image{
     border:1px solid black;
-    height:300px;
-    margin:0 2%;
+    height:250px;
+    margin:7% 9% 3%;
 }
 
-.products .flex-container2{
-    display:flex;
-    background-color:cornflowerblue;
+.product-box p{
+    margin:0 auto 2%;
 }
 
-.products .flex-child2{
-    flex:1;
-    margin-left:-3%;
+.product-box h2{
+    margin:0;
+}
+
+.products .nav-buttons{
+    margin-top:2%;
+    display:inline-block;
+    width:20%;
+}
+
+.products .nav-buttons a{
+    margin:0 12%;
+    text-decoration:none;
+    color:white;
+    padding:5px;
+    background-color:#ccb4e7;
+    border-radius:5px;
+}
+
+.products .nav-buttons a:hover{
+    background-color:#9673A6;
+}
+
+.products .nav-buttons p{
+    margin-top:-6%;
 }
 /* end of all products page css */
 
