--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ nav li a:hover{
 #quiz{
     background-color:#ccb4e7;
     border:1px solid #9673A6;
-    margin:0% 7.5% 0;
+    margin:0 7.5%;
     color:white;
 }
 
@@ -293,8 +293,9 @@ nav li a:hover{
 #yourresult{
     display:none;
     height:auto;
-    margin-bottom:11%;
+    min-height:320px;
     padding-bottom:35px;
+    margin:0 7.5%;
     background-color:#ccb4e7;
     border:1px solid #9673A6;
     text-align:center;
@@ -307,8 +308,18 @@ nav li a:hover{
 
 #yourresult #result{
     font-size:25px;
-    margin:0 10%;
+    margin:0 10% 5%;
     line-height:1.2;
+}
+
+#yourresult #redirect a{
+    font-size:20px;
+    color:white;
+    text-decoration:none;
+}
+
+#yourresult #redirect a:hover{
+    text-decoration:underline;
 }
 /* end of quiz page css */
 
