--- a/style.css
+++ b/style.css
@@ -69,31 +69,43 @@ h1, h2{
 .subtitle {
     grid-column:2/4;
     margin:3.5% 30% 0;
-    text-align:center;
-    border:1px solid black;
+    background-color:grey;
 }
 
 .subtitle p {
     padding:10px;
 }
 
-
-.left{
-    grid-column:2/3;
-    margin-top:5%;
-    border:1px solid black;
-    width:100%;
-    height:250px;
-    background-color:lime;
+.index-similar{
+    grid-column:2/4;
+    height:auto;
+    margin:5% 0 0;
+    background-color:lightskyblue;
 }
 
-.right {
-    grid-column:3/4;
-    margin-top:5%;
+.index-similar h1{
+    text-align:center;
+}
+
+.index-similar .flex-container{
+    margin-top:3%;
+    display:flex;
+}
+
+.index-similar .flex-child{
+    flex:1;
     border:1px solid black;
-    width:100%;
-    height:250px;
-    background-color:greenyellow;
+    height:200px;
+    margin:0 2%;
+}
+
+.index-similar .flex-container2{
+    display:flex;
+}
+
+.index-similar .flex-child2{
+    flex:1;
+    text-align:center;
 }
 /* end of index page css */
 
