--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ nav li a:hover{
     text-decoration:underline;
 }
 
+a.current{
+    text-decoration:underline;
+}
 
 .wrapper {
     grid-row:2;
@@ -113,26 +116,30 @@ nav li a:hover{
 /* index page css */
 .box1 {
     grid-column:1/5;
-    height:650px;
-    border:1px solid black;
+    height:680px;
+    text-align:center;
+    position:relative;
 }
 
-.box1 p {
-    padding:10px;
+.box1 img{
+    width:100%;
+    height:100%;
+    position:absolute;
+    left:0;
 }
 
 .box1 h1 {
-    text-align:center;
-    margin-top:12%;
     font-size:4.5em;
-    margin-bottom:0;
+    position:absolute;
+    top:20%;
+    width:100%;
 }
 
 .box1 h2 {
-    text-align:center;
-    margin-top:0;
+    position:absolute;
+    top:30%; 
+    width:100%;
     font-size:4.5em;
-    font-family:DM Sans;
 }
 
 .box2 {
@@ -149,7 +156,7 @@ nav li a:hover{
 
 .subtitle {
     grid-column:2/4;
-    margin:5% 30% 0;
+    margin:5% 25% 0;
 }
 
 .subtitle p {
@@ -161,21 +168,33 @@ nav li a:hover{
 .left{
     grid-column:2/3;
     margin-top:5%;
-    border:1px solid black;
     width:100%;
     height:300px;
     text-align:center;
+    position:relative;
+}
+
+.left img{
+    position:absolute;
+    left:0;
+    width:100%;
+    height:100%;
+    opacity:60%;
 }
 
 .left h1{
     margin:10% 0 0;
     font-size:40px;
+    position:absolute;    
+    width:100%;
 }
 
 .left p{
+    width:100%;
     font-size:25px;
-    margin-top:5px;
+    margin-top:20%;
     margin-bottom:0;
+    position:absolute;
 }
 
 .left a{
@@ -184,12 +203,14 @@ nav li a:hover{
     color:black;
     text-decoration:none;
     padding:20px 15px;
-    border:1px solid #d4c7af;
-    margin-top:5%;
-    font-size:20px;
+    margin-top:30%;
     border-radius:10px;
+    border:1px solid #d4c7af;
+    font-size:20px;
     font-family:DM Serif Display;
     letter-spacing:1px;
+    position:absolute;
+    left:35%;
 }
 
 .left a:hover{
@@ -201,21 +222,33 @@ nav li a:hover{
 .right {
     grid-column:3/4;
     margin-top:5%;
-    border:1px solid black;
     width:100%;
     height:300px;
     text-align:center;
+    position:relative;
+}
+
+.right img{
+    position:absolute;
+    left:0;
+    width:100%;
+    height:100%;
+    opacity:85%;
 }
 
 .right h1{
     margin:10% 0 0;
+    width:100%;
     font-size:40px;
+    position:absolute;
 }
 
 .right p{
+    width:100%;
     font-size:25px;
-    margin-top:5px;
+    margin-top:20%;
     margin-bottom:0;
+    position:absolute;
 }
 
 .right a{
@@ -224,12 +257,14 @@ nav li a:hover{
     color:black;
     text-decoration:none;
     padding:20px 15px;
-    margin-top:5%;
+    margin-top:30%;
     border-radius:10px;
     border:1px solid #d4c7af;
     font-size:20px;
     font-family:DM Serif Display;
     letter-spacing:1px;
+    position:absolute;
+    left:35%;
 }
 
 .right a:hover{
@@ -273,6 +308,7 @@ nav li a:hover{
 #quiz .choices{
     text-align:center;
     margin:0 auto;
+    font-size:25px;
 }
 
 
@@ -283,20 +319,36 @@ nav li a:hover{
     margin-top:2%;
 }
 
-.choicebox .placeholder{
-    width:85%;
-    height:170px;
-    border:1px solid black;
+.choicebox-text {
+    display:inline-block;
+    font-size:20px;
+    width:37.5%;
+    text-align:left;
+    vertical-align:top;
+    margin-right:15px;
+}
+
+.choicebox img{
+    width:90%;
+    height:90%;
     margin:0 auto;
 }
 
 .choicebox p{
     display:inline-block;
-    font-size:25px;
+}
+
+.choicebox p.text{
+    font-size:20px;
+    margin:0;
 }
 
 .choicebox input{
     margin:0 15px 0 -5px;
+}
+
+.choicebox-text input {
+    margin:0 15px 0 0;
 }
 
 #quiz #submit{
@@ -342,6 +394,7 @@ nav li a:hover{
     font-size:20px;
     color:black;
     text-decoration:none;
+    font-family:DM Sans;
 }
 
 #yourresult #redirect a:hover{
